--- a/1.md
+++ b/1.md
@@ -34,6 +34,65 @@ In this exercise, you will log in to the Azure Portal and review the pre-deploye
 
 > With space Test
 
+
+> Likhitha Added Text
+>
+[10:19 AM] Likhitha G
+--------------------New updated-----------------
+
+**BOLD Test**
+ 
+To add params as in paragraph
+
+> AzureAdUserEmail :** <inject key="AzureAdUserEmail"/>**
+
+> AzureAdUserPassword :** <inject key="AzureAdUserPassword"/>**
+
+> Deployment ID :** <inject key="Deployment ID"/>**
+ 
+AzureAdUserEmail : <inject key="AzureAdUserEmail" style="color:blue"></inject>
+ 
+To add params as in paragraph 
+
+> AzureAdUserEmail :** <inject key="AzureAdUserEmail"/>**
+ 
+> AzureAdUserPassword :** <inject key="AzureAdUserPassword"/>**
+ 
+> Secret Key :** <inject key="Secret Key"/>**
+ 
+**Copy Clip board**
+
+```
+
+Test Command with colors
+
+Test QA Creds:
+
+AzureAdUserEmail : <inject key="AzureAdUserEmail"></inject>
+
+AzureAdUserPassword : <inject key="AzureAdUserPassword"></inject>
+
+Deployment ID : <inject key="Deployment ID"></inject>
+ 
+```
+
+Labvm Admin Username : <inject key="Labvm Admin Username"></inject>
+
+Labvm Admin Password : <inject key="Labvm Admin Password"></inject>
+
+Labvm DNS Name : <inject key="Labvm DNS Name" style="color:blue"></inject>
+ 
+**Testing tags**
+
+Tag 1 : <inject key="AzureAdUserEmail">
+
+Tag 2 : <inject key="AzureAdUserEmail" />
+
+Tag 3 : <inject key="AzureAdUserEmail"></inject>
+
+ > Likhitha Text....................
+>
+>
  Alert test including multiple lines Alert test including multiple lines Alert test including multiple lines Alert test including multiple lines Alert test including multiple lines Alert test including multiple lines Alert test including multiple lines Alert test including multiple lines Alert test including multiple lines Alert test including multiple lines 
 
 ### Getting Started with Lab - Replacement Test Pass 
