--- a/1.md
+++ b/1.md
@@ -7,93 +7,9 @@ Duration: 10 mins
 
 In this exercise, you will log in to the Azure Portal and review the pre-deployed resources as part of the lab environment.
 
-**In this exercise, you will log in to the Azure Portal and review the pre-deployed resources as part of the lab environment.**
-
-**BOLD TEST**
-> 👍👍👍 Priyanka ab Guide Rendering Test
-> Priyanka Labguide
-
-**In this exercise, you will log in to the Azure Portal and review the pre-deployed resources as part of the lab environment.**
-
->  👍👌👌👌👌👌👌👍👍👍👍👍👍👍👍   Success Message Test test
-> 
-> 👌👌👌👌👌  WIn
-> 
-> 😊😊😊😊 Text here ...... sample qa
-> 
->  👍👍👍👍👍👍👍👍 Success TEst
-> 
-> 🙌🙌🙌 Sample QA
-
-**BOLD QA Test  - In this exercise, you will log in to the Azure Portal and review the pre-deployed resources as part of the lab environment.**
-
- > 😂 Font Test QA
 >   ![ClipWindowsGIF](https://github.com/bonzz/testguide/assets/76195593/5a83c32d-1e47-4eb2-897a-ffa18ed816a2)
 
-> WithoutSpaceTest
 
-> With space Test
-
-
-> Likhitha Added Text
->
-[10:19 AM] Likhitha G
---------------------New updated-----------------
-
-**BOLD Test**
- 
-To add params as in paragraph
-
-> AzureAdUserEmail :** <inject key="AzureAdUserEmail"/>**
-
-> AzureAdUserPassword :** <inject key="AzureAdUserPassword"/>**
-
-> Deployment ID :** <inject key="Deployment ID"/>**
- 
-AzureAdUserEmail : <inject key="AzureAdUserEmail" style="color:blue"></inject>
- 
-To add params as in paragraph 
-
-> AzureAdUserEmail :** <inject key="AzureAdUserEmail"/>**
- 
-> AzureAdUserPassword :** <inject key="AzureAdUserPassword"/>**
- 
-> Secret Key :** <inject key="Secret Key"/>**
- 
-**Copy Clip board**
-
-```
-
-Test Command with colors
-
-Test QA Creds:
-
-AzureAdUserEmail : <inject key="AzureAdUserEmail"></inject>
-
-AzureAdUserPassword : <inject key="AzureAdUserPassword"></inject>
-
-Deployment ID : <inject key="Deployment ID"></inject>
- 
-```
-
-Labvm Admin Username : <inject key="Labvm Admin Username"></inject>
-
-Labvm Admin Password : <inject key="Labvm Admin Password"></inject>
-
-Labvm DNS Name : <inject key="Labvm DNS Name" style="color:blue"></inject>
- 
-**Testing tags**
-
-Tag 1 : <inject key="AzureAdUserEmail">
-
-Tag 2 : <inject key="AzureAdUserEmail" />
-
-Tag 3 : <inject key="AzureAdUserEmail"></inject>
-
- > Likhitha Text....................
->
->
- Alert test including multiple lines Alert test including multiple lines Alert test including multiple lines Alert test including multiple lines Alert test including multiple lines Alert test including multiple lines Alert test including multiple lines Alert test including multiple lines Alert test including multiple lines Alert test including multiple lines 
 
 ### Getting Started with Lab - Replacement Test Pass 
 1. Once the environment is provisioned, a virtual machine and lab guide will get loaded into your browser. Use this virtual machine throughout the workshop to perform the lab.
@@ -116,13 +32,6 @@ Tag 3 : <inject key="AzureAdUserEmail"></inject>
 
 1. On the **Sign in to Microsoft Azure** window, you will see the login screen, enter the following username and click on Next
     * Email/Username1 : <inject key="AzureAdUserEmail"></inject>
-   
-   Testing diffrent ways of Inject keys by adding spaces
-
-    * Email/Username2 : <inject key="AzureAdUserEmail">      </inject>
-    * Email/Username3      :      <inject key="AzureAdUserEmail"></inject>
-    * Email/Username4:<inject key="AzureAdUserEmail"></inject>
-
 
 **Testing a Code block**
   
@@ -138,9 +47,7 @@ Type 2 : <inject key="AzureAdUserEmail" />
 Type 3 : <inject key="Display Name"></inject>
 
    ```
-
-
-  
+ 
 Username" />
 Login-AzAccount -Credential <inject key="AzureAdUserEmail" />
 $context =  Select-AzSubscription -SubscriptionId jumpvm-<inject key="DeploymentID" />
@@ -162,9 +69,6 @@ $context =  Select-AzSubscription -SubscriptionId jumpvm-<inject key="Deployment
 1. If you see the pop-up **You have free Azure Advisor recommendations!**, close the window to continue the lab.
 
 1. If a **Welcome to Microsoft Azure Replacement Test** popup window appears, click **Maybe Later** to skip the tour.
-2. If a Welcome to Microsoft Azure popup window appears, click **Maybe Later** to skip the tour.
-3. If a popup window appears, click **Maybe Later**  to skip the tour.
-
 
 1. Now you can see Azure Portal Dashboard, click on **Resource groups** from the Navigate panel to see the resource groups.
 
@@ -174,13 +78,13 @@ $context =  Select-AzSubscription -SubscriptionId jumpvm-<inject key="Deployment
 
    * In the RESOURCE group we have one **Virtual Machine**, **Logic App**, **Service Bus** and **IoT Hub** deployed.
 
-   * QA Input text **Virtual Machine**: You will be using the Virtual Machine which is already open on the left side of the page to perform all the lab exercises.
+   **Virtual Machine**: You will be using the Virtual Machine which is already open on the left side of the page to perform all the lab exercises.
 
-   * **IoT Hub**: QA Input Using the existing IoT hub you will create an IoT hub device and view the telemetry data that is being sent to IoT Hub.
+   **IoT Hub**: QA Input Using the existing IoT hub you will create an IoT hub device and view the telemetry data that is being sent to IoT Hub.
 
-   * QA INPUT **Service Bus** INPUT: You will use the Service bus to store the data generated by the IoT hub device in a Service bus queue.
+  **Service Bus** INPUT: You will use the Service bus to store the data generated by the IoT hub device in a Service bus queue.
 
-   * **Logic App**: You will be using the logic app to create a workflow that monitors the Service bus queue and sends an e-mail notification whenever a message is added to the **queue**.
+**Logic App**: You will be using the logic app to create a workflow that monitors the Service bus queue and sends an e-mail notification whenever a message is added to the **queue**.
 
    ![](https://github.com/CloudLabsAI-Azure/AIW-SAP-on-Azure/blob/main/media/M2-Ex1-resources.png?raw=true)
 
@@ -195,107 +99,3 @@ $context =  Select-AzSubscription -SubscriptionId jumpvm-<inject key="Deployment
 ## Summary
 **
 In this exercise, you signed in to the Azure Portal and reviewed the pre-deployed resources.**
-
-
-
-
-
-
-QA Test at End page from MP
-
-  ```
-   Connect-AzAccount   **//Sample text in Code block**
-   $securePassword = $password | convertto-securestring -AsPlainText -Force
-   $UserCredential = New-Object -TypeName "System.Management.Automation.PSCredential" -ArgumentList $userName, <inject key="LabVM Admin Username" />
-   Login-AzAccount -Credential <inject key="AzureAdUserEmail" />     //Username test
-   $context =  Select-AzSubscription -SubscriptionId jumpvm- <inject key="DeploymentID" />
- Testing tags in Code block - adding Inject keys in diff ways
-Type 1 : <inject key="AzureAdUserEmail">
-Type 2 : <inject key="Subscription Id" />
-Type 3 : <inject key="Display Name"></inject>      //Display Name
-
-   ```
-
-
-Test 2 for code block
-
-```
-Srinika //testing code block with spaces
-**Bold**
-_Italic_
-Underline
-Inject options
-SUB ID :::::    <inject key="Subscription Id">
-
-Display Name :  <inject key="Display Name" />
-
- 
-Secret Key :::  <inject key="Secret Key"></inject>
-
-
-```
-With color
-Inject
-AzureAdUserEmail : <inject key="AzureAdUserEmail" style="color:blue"></inject>
-
-To add params as in paragraph 
-> AzureAdUserEmail :** <inject key="AzureAdUserEmail"/>**
-
-> AzureAdUserPassword :** <inject key="AzureAdUserPassword"/>**
-
-> Secret Key :** <inject key="Secret Key"/>**
-
-
-
-Likhitha 
-**BOLD TEST**
-```
-<inject key="Subscription Id">
-
-<inject key="AzureAdUserEmail" />
-
-<inject key="AzureAdUserPassword"></inject>
-```
-
-
-
-
-```
-Srinika //testing code block without space
-Inject options
-SUB ID :::::    <inject key="Subscription Id">
-Display Name :  <inject key="Display Name" />
-Secret Key :::  <inject key="Secret Key"></inject>
-SUB ID :::::    <inject key="Subscription Id">
-Display Name :  <inject key="Display Name" />
-Secret Key :::  <inject key="Secret Key"></inject>
-SUB ID :::::    <inject key="Subscription Id">
-Display Name :  <inject key="Display Name" />
-Secret Key :::  <inject key="Secret Key">                                                </inject>
-
-
-SUB ID :::::    <inject key="Subscription Id">
-Display Name :  <inject key="Display Name" />
-Secret Key :::  <inject key="Secret Key"></inject>
-SUB ID :::::    <inject key="Subscription Id">
-Display Name :  <inject key="Display Name" />
-Secret Key :::  <inject key="Secret Key"></inject>
-SUB ID :::::    <inject key="Subscription Id">
-Display Name :  <inject key="Display Name" />
-Secret Key :::  <inject key="Secret Key"></inject>
-SUB ID :::::    <inject key="Subscription Id">
-Display Name :  <inject key="Display Name" />
-Secret Key :::  <inject key="Secret Key"></inject>
-SUB ID :::::    <inject key="Subscription Id">
-Display Name :  <inject key="Display Name" />
-Secret Key :::  <inject key="Secret Key"></inject>
-SUB ID :::::    <inject key="Subscription Id">
-Display Name :  <inject key="Display Name" />
-Secret Key :::  <inject key="Secret Key"></inject>
-
-
-```
-
-
-
-
