--- a/1.md
+++ b/1.md
@@ -34,6 +34,8 @@ In this exercise, you will log in to the Azure Portal and review the pre-deploye
     * Email/Username1 : <inject key="AzureAdUserEmail"></inject>
 
 
+      ![image](https://github.com/bonzz/testguide/assets/84063078/8a9cdb9d-513e-4685-8120-c9a1628a59aa)
+
 1. Now enter the following password and click on **Sign in**.   
 
    * Password : <inject key="AzureAdUserPassword"></inject>
@@ -79,3 +81,26 @@ $context =  Select-AzSubscription -SubscriptionId jumpvm-<inject key="Deployment
 ## Summary
 **
 In this exercise, you signed in to the Azure Portal and reviewed the pre-deployed resources.** 
+
+
+
+
+Test QA - srinika changes
+
+> Add color in commands 
+
+```
+AzureAdUserEmail : <inject key="AzureAdUserEmail"></inject>
+AzureAdUserPassword : <inject key="AzureAdUserPassword"></inject>
+Deployment ID : <inject key="Deployment ID"></inject>
+Labvm Admin Username : <inject key="Labvm Admin Username"></inject>
+Labvm Admin Password : <inject key="Labvm Admin Password"></inject>
+Labvm DNS Name : <inject key="Labvm DNS Name" style="color:blue"></inject>
+```
+
+To add params as in paragraph 
+> AzureAdUserEmail :** <inject key="AzureAdUserEmail"/>**
+> AzureAdUserPassword :** <inject key="AzureAdUserPassword"/>**
+> Deployment ID :** <inject key="Deployment ID"/>**
+
+
