--- a/1.md
+++ b/1.md
@@ -91,16 +91,25 @@ Test QA - srinika changes
 
 ```
 AzureAdUserEmail : <inject key="AzureAdUserEmail"></inject>
-AzureAdUserPassword : <inject key="AzureAdUserPassword"></inject>
+AzureAdUserPassword : <inject key="AzureAdUserPassword" style="color:blue"></inject>
 Deployment ID : <inject key="Deployment ID"></inject>
 Labvm Admin Username : <inject key="Labvm Admin Username"></inject>
 Labvm Admin Password : <inject key="Labvm Admin Password"></inject>
-Labvm DNS Name : <inject key="Labvm DNS Name" style="color:blue"></inject>
+Labvm DNS Name : <inject key="Labvm DNS Name"></inject>
 ```
 
 To add params as in paragraph 
 > AzureAdUserEmail :** <inject key="AzureAdUserEmail"/>**
+
 > AzureAdUserPassword :** <inject key="AzureAdUserPassword"/>**
+
 > Deployment ID :** <inject key="Deployment ID"/>**
+
+
+```
+AzureAdUserEmail : <inject key="AzureAdUserEmail" enablecopy="false"></inject>
+
+```
+
 
 
