--- a/1.md
+++ b/1.md
@@ -88,7 +88,7 @@ In this exercise, you signed in to the Azure Portal and reviewed the pre-deploye
 
 
 
-Test QA - srinika changes
+**Test QA - srinika changes**
 
 > Add color in commands 
 
@@ -102,11 +102,11 @@ Labvm DNS Name : <inject key="Labvm DNS Name"></inject>
 ```
 
 To add params as in paragraph 
-> AzureAdUserEmail :** <inject key="AzureAdUserEmail"/>**
+AzureAdUserEmail :** <inject key="AzureAdUserEmail"/>**
 
-> AzureAdUserPassword :** <inject key="AzureAdUserPassword"/>**
+AzureAdUserPassword :** <inject key="AzureAdUserPassword"/>**
 
-> Deployment ID :** <inject key="Deployment ID"/>**
+Deployment ID :** <inject key="Deployment ID"/>**
 
 
 ```
