--- a/1.md
+++ b/1.md
@@ -110,7 +110,7 @@ Deployment ID :** <inject key="Deployment ID"/>**
 
 
 ```
-AzureAdUserEmail : <inject key="AzureAdUserEmail" enablecopy="false"></inject>
+AzureAdUserEmail : <inject key="AzureAdUserEmail" style="color:blue"></inject>
 
 ```
 
