--- a/1.md
+++ b/1.md
@@ -102,11 +102,10 @@ Labvm DNS Name : <inject key="Labvm DNS Name"></inject>
 ```
 
 To add params as in paragraph 
-AzureAdUserEmail :** <inject key="AzureAdUserEmail"/>**
+>AzureAdUserEmail :** <inject key="AzureAdUserEmail"/>**
+>AzureAdUserPassword :** <inject key="AzureAdUserPassword"/>**
 
-AzureAdUserPassword :** <inject key="AzureAdUserPassword"/>**
 
-Deployment ID :** <inject key="Deployment ID"/>**
 
 
 ```
