--- a/1.md
+++ b/1.md
@@ -9,7 +9,9 @@ In this exercise, you will log in to the Azure Portal and review the pre-deploye
 
 >   ![ClipWindowsGIF](https://github.com/bonzz/testguide/assets/76195593/5a83c32d-1e47-4eb2-897a-ffa18ed816a2)
 
-
+MP Color Test 
+<p style="color:red">Text in Red Color.</p>
+<p style="color: Green">Sample text in Green Color........Sample text in Green Color.Sample text in Green Color...</p>
 
 ### Getting Started with Lab - Replacement Test Pass 
 1. Once the environment is provisioned, a virtual machine and lab guide will get loaded into your browser. Use this virtual machine throughout the workshop to perform the lab.
