--- a/1.md
+++ b/1.md
@@ -12,6 +12,7 @@ In this exercise, you will log in to the Azure Portal and review the pre-deploye
 MP Color Test 
 <span style="color: green"> QA Green Text Test </span>
 
+<span style="color: green"> Some green text </span>
 
 ### Getting Started with Lab - Replacement Test Pass 
 1. Once the environment is provisioned, a virtual machine and lab guide will get loaded into your browser. Use this virtual machine throughout the workshop to perform the lab.
