--- a/1.md
+++ b/1.md
@@ -16,6 +16,9 @@ MP Color Test
 
 <span style="color: Yellow"> Some Yellow text </span>
 
+
+<span style="color: Pink"> Some Pink text </span>
+
 ### Getting Started with Lab - Replacement Test Pass 
 1. Once the environment is provisioned, a virtual machine and lab guide will get loaded into your browser. Use this virtual machine throughout the workshop to perform the lab.
 
