--- a/1.md
+++ b/1.md
@@ -32,6 +32,8 @@ Code Block Test----
 
     ![]<span style="color: Red">https://github.com/CloudLabsAI-Azure/AIW-SAP-on-Azure/blob/main/media/M2-Ex1-Environmentdetails.png?raw=true</span>
 
+    !<span style="color: red;">Code block text test</span>
+
 3. You can also open the Lab Guide on a separate full window by selecting the **Split Window** button on the bottom right corner.
 
    ![](https://github.com/CloudLabsAI-Azure/AIW-SAP-on-Azure/blob/main/media/M2-Ex1-Splitwindow.png?raw=true)
