--- a/1.md
+++ b/1.md
@@ -40,7 +40,8 @@ Code Block Test----
 
 CODE BLOCK TEST 2
 
-  []<span style="color: red;">Code block text test</span>
+ ![]<span style="color: red;">Code block text test</span>
+
 ## Task 1: Log in to Azure Portal and verify the pre-deployed resources
 
 1. Let us start by logging into the Azure Portal to check the resources deployed for the lab environment. In the virtual machine (VM) on the left, click on the Azure portal desktop icon as shown below.
