--- a/1.md
+++ b/1.md
@@ -40,7 +40,7 @@ Code Block Test----
 
 CODE BLOCK TEST 2
 
- ![]<span style="color: red;">Code block text test</span>
+ ![](<span style="color: red;">Code block text test</span>)
 
 ## Task 1: Log in to Azure Portal and verify the pre-deployed resources
 
