--- a/1.md
+++ b/1.md
@@ -5,6 +5,12 @@ Duration: 10 mins
 
 ## Overview 
 
+**Verifying Static Value and key :**
+
+* **checkNNumber:** <inject key="testKey2" value="StaticValue2" key="testkay1"  value="StaticValue1" />
+ 
+* **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue2" key="AzureAdUserEmail" value="StaticValue1" enableCopy="false" />
+
 In this exercise, you will log in to the Azure Portal and review the pre-deployed resources as part of the lab environment.
 
 >   ![ClipWindowsGIF](https://github.com/bonzz/testguide/assets/76195593/5a83c32d-1e47-4eb2-897a-ffa18ed816a2)
