--- a/1.md
+++ b/1.md
@@ -11,6 +11,8 @@ Duration: 10 mins
  
 * **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue2" key="AzureAdUserEmail" value="StaticValue1" enableCopy="false" />
 
+Sample Statuic Test Data ................
+
 In this exercise, you will log in to the Azure Portal and review the pre-deployed resources as part of the lab environment.
 
 >   ![ClipWindowsGIF](https://github.com/bonzz/testguide/assets/76195593/5a83c32d-1e47-4eb2-897a-ffa18ed816a2)
