--- a/1.md
+++ b/1.md
@@ -11,6 +11,7 @@ Duration: 10 mins
 
  
 * **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue3" key="testkay2"  value="StaticValue2" />
+Azure PWD ...
 
 * **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue2" key="AzureAdUserEmail" value="StaticValue1" 
     enableCopy="false" />
