--- a/1.md
+++ b/1.md
@@ -16,6 +16,11 @@ Azure PWD ...
 * **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue2" key="AzureAdUserEmail" value="StaticValue1" 
     enableCopy="false" />
 
+Enable Copy - True-----------------
+
+* **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue4" key="AzureAdUserEmail" value="StaticValue4" 
+    enableCopy="true" />
+
 Sample Statuic Test Data ................
 
 In this exercise, you will log in to the Azure Portal and review the pre-deployed resources as part of the lab environment.
