--- a/1.md
+++ b/1.md
@@ -27,6 +27,12 @@ In this exercise, you will log in to the Azure Portal and review the pre-deploye
 
 >   ![ClipWindowsGIF](https://github.com/bonzz/testguide/assets/76195593/5a83c32d-1e47-4eb2-897a-ffa18ed816a2)
 
+-- Hiren Inject Keys Static Test
+
+* **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue4" key="AzureAdUserEmail" value="StaticValue4" 
+    enableCopy="true" />
+
+
 MP Color Test 
 <span style="color: green"> QA Green Text Test </span>
 
