--- a/1.md
+++ b/1.md
@@ -155,5 +155,10 @@ AzureAdUserEmail : <inject key="AzureAdUserEmail" style="color:blue"></inject>
 
 ```
 
-
-
+Varshini 
+* **checkNNumber:** <inject key="testKey2" value="StaticValue2" key="testkay1"  value="StaticValue1" />
+ 
+* **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue3" key="testkay2"  value="StaticValue2" />
+ 
+* **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue2" key="AzureAdUserEmail" value="StaticValue1" 
+   enableCopy="false" />
