--- a/1.md
+++ b/1.md
@@ -163,3 +163,8 @@ Divya
  
 * **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue2" key="AzureAdUserEmail" value="StaticValue1" 
    enableCopy="false" />
+
+```
+AzureAdUserEmail : <inject key="AzureAdUserEmail" style="color:blue"></inject>
+
+```
