--- a/1.md
+++ b/1.md
@@ -154,8 +154,8 @@ To add params as in paragraph
 AzureAdUserEmail : <inject key="AzureAdUserEmail" style="color:blue"></inject>
 
 ```
-
-Divya 
+**DIVYA**
+*DIVYA*
  
 * **checkNNumber:** <inject key="testKey2" value="StaticValue2" key="testkay1"  value="StaticValue1" />
  
@@ -168,3 +168,14 @@ Divya
 AzureAdUserEmail : <inject key="AzureAdUserEmail" style="color:blue"></inject>
 
 ```
+
+![ClipWindowsGIF](https://github.com/bonzz/testguide/assets/76195593/5a83c32d-1e47-4eb2-897a-ffa18ed816a2)
+
+**Divya Color Test**
+<span style="color: green"> QA Green Text Test </span>
+
+<span style="color: Blue"> Some Blue text </span>
+
+<span style="color: Yellow"> Some Yellow text </span>
+
+<span style="color: Pink"> Some Pink text </span>
