--- a/1.md
+++ b/1.md
@@ -181,3 +181,7 @@ AzureAdUserEmail : <inject key="AzureAdUserEmail" style="color:blue"></inject>
 <span style="color: Pink"> Some Pink text </span>
 
 ![](https://github.com/CloudLabsAI-Azure/AIW-SAP-on-Azure/blob/main/media/M2-Ex1-azureportal.png?raw=true)
+
+second image 
+
+![](https://github.com/CloudLabsAI-Azure/AIW-SAP-on-Azure/blob/main/media/M2-Ex1-azureportal.png?raw=true)
