--- a/1.md
+++ b/1.md
@@ -168,6 +168,12 @@ AzureAdUserEmail : <inject key="AzureAdUserEmail" style="color:blue"></inject>
 AzureAdUserEmail : <inject key="AzureAdUserEmail" style="color:blue"></inject>
 
 ```
+Varshini HR 
+CODE BLOCK TEST 2
+
+ ![](<span style="color: red;">Code block text test</span>)
+ 
+   ![image](https://github.com/bonzz/testguide/assets/84063078/8a9cdb9d-513e-4685-8120-c9a1628a59aa)
 
 ![ClipWindowsGIF](https://github.com/bonzz/testguide/assets/76195593/5a83c32d-1e47-4eb2-897a-ffa18ed816a2)
 
