--- a/1.md
+++ b/1.md
@@ -168,7 +168,7 @@ AzureAdUserEmail : <inject key="AzureAdUserEmail" style="color:blue"></inject>
 AzureAdUserEmail : <inject key="AzureAdUserEmail" style="color:blue"></inject>
 
 ```
-Varshini HR 
+**Varshini HR **
 CODE BLOCK TEST 2
 
  ![](<span style="color: red;">Code block text test</span>)
@@ -177,8 +177,10 @@ CODE BLOCK TEST 2
 
 ![ClipWindowsGIF](https://github.com/bonzz/testguide/assets/76195593/5a83c32d-1e47-4eb2-897a-ffa18ed816a2)
 
-**Divya Color Test**
+**Varshini Color Test**
 <span style="color: green"> QA Green Text Test </span>
+
+<span style="color: Red"> QA Red Text Test </span>
 
 <span style="color: Blue"> Some Blue text </span>
 
