--- a/1.md
+++ b/1.md
@@ -1,4 +1,5 @@
 **Varshini inject keys**
+![ClipWindowsGIF](https://github.com/bonzz/testguide/assets/76195593/5a83c32d-1e47-4eb2-897a-ffa18ed816a2)
 # Module 2: Data Insights - QA
 
 # Exercise 1: Getting Started with Azure 
