--- a/1.md
+++ b/1.md
@@ -1,5 +1,12 @@
 **Varshini inject keys**
 ![ClipWindowsGIF](https://github.com/bonzz/testguide/assets/76195593/5a83c32d-1e47-4eb2-897a-ffa18ed816a2)
+
+
+* **checkNNumber:** <inject key="testKey2" value="StaticValue2" key="testkay1"  value="StaticValue1" />
+
+ 
+* **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue3" key="testkay2"  value="StaticValue2" />
+
 # Module 2: Data Insights - QA
 
 # Exercise 1: Getting Started with Azure 
