--- a/1.md
+++ b/1.md
@@ -66,10 +66,14 @@ MP Color Test
 
     ![](https://github.com/CloudLabsAI-Azure/AIW-SAP-on-Azure/blob/main/media/M2-Ex1-Environment.png?raw=true)
 
-   QA Test Image -
+   QA Test Image 1 -
 
      ![](https://github.com/CloudLabsAI-Azure/AIW-SAP-on-Azure/blob/main/media/M2-Ex1-Environment.png?raw=true)
 
+
+QA Test Image 2 -
+
+     ![](http://github.com/CloudLabsAI-Azure/AIW-SAP-on-Azure/blob/main/media/M2-Ex1-Environment.png?raw=true)
 
 3. To get the lab environment details, you can select the **Environment Details** tab. Additionally, the credentials will also be sent to your email address provided during registration.
 
