--- a/1.md
+++ b/1.md
@@ -182,8 +182,8 @@ Varshini HR updated test
 AzureAdUserEmail : <inject key="AzureAdUserEmail" style="color:blue"></inject>
 
 ```
-**DIVYA**
-*DIVYA*
+Hello 
+Inject keys from VHR
  
 * **checkNNumber:** <inject key="testKey2" value="StaticValue2" key="testkay1"  value="StaticValue1" />
  
@@ -215,6 +215,9 @@ CODE BLOCK TEST 2
 <span style="color: Yellow"> Some Yellow text </span>
 
 <span style="color: Pink"> Some Pink text </span>
+
+
+<span style="color: Vilot"> Some Pink text </span>
 
 ![](https://github.com/CloudLabsAI-Azure/AIW-SAP-on-Azure/blob/main/media/M2-Ex1-azureportal.png?raw=true)
 
