--- a/1.md
+++ b/1.md
@@ -230,3 +230,12 @@ CODE BLOCK TEST 2
 second image 
 
 ![](https://github.com/CloudLabsAI-Azure/AIW-SAP-on-Azure/blob/main/media/M2-Ex1-azureportal.png?raw=true)
+
+**Priya**
+<inject key="DeploymentID" enableCopy="false"></inject>
+
+![](https://github.com/CloudLabsAI-Azure/AIW-SAP-on-Azure/blob/main/media/M2-Ex1-azureportal.png?raw=true)
+
+ ![](<span style="color: red;">Code block text test</span>)
+
+ AppleQASpektra
