--- a/1.md
+++ b/1.md
@@ -234,8 +234,18 @@ second image
 **Priya**
 <inject key="DeploymentID" enableCopy="false"></inject>
 
-![](https://github.com/CloudLabsAI-Azure/AIW-SAP-on-Azure/blob/main/media/M2-Ex1-azureportal.png?raw=true)
-
  ![](<span style="color: red;">Code block text test</span>)
 
  AppleQASpektra
+
+ <span style="color: green"> QA Green Text Test </span>
+
+<span style="color: Red"> QA Red Text Test </span>
+
+<span style="color: Blue"> Some Blue text </span>
+
+<span style="color: Yellow"> Some Yellow text </span>
+
+<span style="color: Pink"> Some Pink text </span>
+
+<span style="color: Vilot"> Some Pink text </span>
