--- a/1.md
+++ b/1.md
@@ -238,14 +238,9 @@ second image
 
  AppleQASpektra
 
- <span style="color: green"> QA Green Text Test </span>
+ * **checkNNumber:** <inject key="testKey2" value="StaticValue2" key="testkay1"  value="StaticValue1" />
 
-<span style="color: Red"> QA Red Text Test </span>
+ 
+* **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue3" key="testkay2"  value="StaticValue2" />
 
-<span style="color: Blue"> Some Blue text </span>
-
-<span style="color: Yellow"> Some Yellow text </span>
-
-<span style="color: Pink"> Some Pink text </span>
-
-<span style="color: Vilot"> Some Pink text </span>
+QATest2011
