--- a/1.md
+++ b/1.md
@@ -243,4 +243,7 @@ second image
  
 * **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue3" key="testkay2"  value="StaticValue2" />
 
+![]<<span style="color: red;">[Code block text test](https://github.com/CloudLabsAI-Azure/AIW-SAP-on-Azure/blob/main/media/M2-Ex1-Environmentdetails.png)</span>
+    ![]Labvm DNS Name : <inject key="Labvm DNS Name" style="color:Red"></inject>
+
 QATest2011
