--- a/1.md
+++ b/1.md
@@ -243,11 +243,16 @@ second image
  
 * **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue3" key="testkay2"  value="StaticValue2" />
 
+> Add color in commands 
+
+```
 AzureAdUserEmail : <inject key="AzureAdUserEmail"></inject>
 AzureAdUserPassword : <inject key="AzureAdUserPassword" style="color:blue"></inject>
 Deployment ID : <inject key="Deployment ID"></inject>
 Labvm Admin Username : <inject key="Labvm Admin Username"></inject>
 Labvm Admin Password : <inject key="Labvm Admin Password"></inject>
 Labvm DNS Name : <inject key="Labvm DNS Name"></inject>
+```
+
 
 QATest2011
