--- a/1.md
+++ b/1.md
@@ -4,7 +4,7 @@
 --
 
 QA Inject test
-<inject key="DeploymentID" enableCopy="false"></inject>
+<inject key="DeploymentID" enableCopy="true"></inject>
 
 --varshini Inject Keys Static Test
 
