--- a/1.md
+++ b/1.md
@@ -4,6 +4,13 @@
 --
 
 QA Inject test
+
+Code Block Test----
+
+    ![]<<span style="color: red;">[Code block text test](https://github.com/CloudLabsAI-Azure/AIW-SAP-on-Azure/blob/main/media/M2-Ex1-Environmentdetails.png)</span>
+    ![]Labvm DNS Name : <inject key="Labvm DNS Name" style="color:Red"></inject
+     ![]Labvm DNS Name : <inject key="DeploymentID" style="color:Blue"></inject
+    
 <inject key="DeploymentID" enableCopy="true"></inject>
 
 --varshini Inject Keys Static Test
