--- a/1.md
+++ b/1.md
@@ -245,7 +245,7 @@ second image
 <inject key="DeploymentID" enableCopy="false"></inject>
 ```
 
- ![](<span style="color: red;">Code block text test</span>)
+![](https://www.freepik.com/free-photo/closeup-fruit-dove-ptilinopus-perched-branch_17243082.htm#fromView=keyword&page=1&position=2&uuid=85299c9b-cc46-4643-b2fe-a38ca7a95ba0)
 
  AppleQASpektra
 
@@ -253,6 +253,19 @@ second image
 
  
 * **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue3" key="testkay2"  value="StaticValue2" />
+
+<span style="color: green"> QA Green Text Test </span>
+
+<span style="color: Red"> QA Red Text Test </span>
+
+<span style="color: Blue"> Some Blue text </span>
+
+<span style="color: Yellow"> Some Yellow text </span>
+
+<span style="color: Pink"> Some Pink text </span>
+
+
+<span style="color: Vilot"> Some Pink text </span>
 
 > Add color in commands 
 
