--- a/1.md
+++ b/1.md
@@ -247,12 +247,11 @@ second image
 
 ![Image](https://www.freepik.com/free-photo/closeup-fruit-dove-ptilinopus-perched-branch_17243082.htm#fromView=keyword&page=1&position=2&uuid=85299c9b-cc46-4643-b2fe-a38ca7a95ba0)
 
-![Image](https://stock.adobe.com/in/images/robin-on-a-branch-with-small-birds-in-a-jpg-image-robin-branch-small-birds-perched-nature-wildlife-feathers/937127370)
+![](https://stock.adobe.com/in/images/robin-on-a-branch-with-small-birds-in-a-jpg-image-robin-branch-small-birds-perched-nature-wildlife-feathers/937127370)
 
  AppleQASpektra
 
- * **checkNNumber:** <inject key="testKey2" value="StaticValue2" key="testkay1"  value="StaticValue1" />
-
+ * **checkNNumber:** <inject key="testKey2" value="StaticValue2" key="testkay1"  value="StaticValue1" /
  
 * **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue3" key="testkay2"  value="StaticValue2" />
 
@@ -266,10 +265,9 @@ second image
 
 <span style="color: Pink"> Some Pink text </span>
 
-
 <span style="color: Vilot"> Some Pink text </span>
 
-> Add color in commands 
+> Add color in commands
 
 ```
 AzureAdUserEmail : <inject key="AzureAdUserEmail"></inject>
