--- a/1.md
+++ b/1.md
@@ -277,7 +277,9 @@ Labvm Admin Username : <inject key="Labvm Admin Username"></inject>
 Labvm Admin Password : <inject key="Labvm Admin Password"></inject>
 Labvm DNS Name : <inject key="Labvm DNS Name"></inject>
 ```
+You can also open the Lab Guide on a separate full window by selecting the **Split Window** button on the bottom right corner.
 
+   ![](https://github.com/CloudLabsAI-Azure/AIW-SAP-on-Azure/blob/main/media/M2-Ex1-Splitwindow.png?raw=true)
 
 QATest2011
 
