--- a/1.md
+++ b/1.md
@@ -242,7 +242,7 @@ second image
 
 **Priya**
 ```
-<inject key="DeploymentID" enableCopy="false">Hey This is QA</inject>
+<inject>Hey This is QA</inject>
 ```
 
 ![Image](https://www.freepik.com/free-photo/closeup-fruit-dove-ptilinopus-perched-branch_17243082.htm#fromView=keyword&page=1&position=2&uuid=85299c9b-cc46-4643-b2fe-a38ca7a95ba0)
