--- a/1.md
+++ b/1.md
@@ -249,7 +249,7 @@ second image
 
 🙂
 
-![](https://stock.adobe.com/in/images/robin-on-a-branch-with-small-birds-in-a-jpg-image-robin-branch-small-birds-perched-nature-wildlife-feathers/937127370)
+![ClipWindowsGIF](https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExeDhqZjRjc25lMTdzcmh3amw3dDkxOTBsdzI4OTZpMjI5OWxmMjhmdiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/rrmf3fICPZWg1MMXOW/giphy.webp)
 
  AppleQASpektra
 
