--- a/1.md
+++ b/1.md
@@ -8,10 +8,10 @@ Duration: 10 mins
 **Verifying Static Value and key :**
 
 * **checkNNumber:** <inject key="testKey2" value="StaticValue2" key="testkay1"  value="StaticValue1" />
+ **checkNNumber:** <inject key="testKey2" value="StaticValue2" />
 
  
-* **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue3" key="testkay2"  value="StaticValue2" />
-Azure PWD ...
+* **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue3" key="testkay2" />
 
 * **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue2" key="AzureAdUserEmail" value="StaticValue1" 
     enableCopy="false" />
