--- a/1.md
+++ b/1.md
@@ -11,7 +11,7 @@ Duration: 10 mins
  **checkNNumber:** <inject key="testKey2" value="StaticValue2" />
 
  
-* **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue3" key="testkay2" />
+* **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue3" />
 
 * **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue2" key="AzureAdUserEmail" value="StaticValue1" 
     enableCopy="false" />
