--- a/1.md
+++ b/1.md
@@ -8,18 +8,19 @@ Duration: 10 mins
 **Verifying Static Value and key :**
 
 * **checkNNumber:** <inject key="testKey2" value="StaticValue2" key="testkay1"  value="StaticValue1" />
+
  **checkNNumber:** <inject key="testKey2" value="StaticValue2" />
 
- 
 * **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue3" />
 
-* **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue2" key="AzureAdUserEmail" value="StaticValue1" 
-    enableCopy="false" />
+Enable Copy - True -----------------
 
-Enable Copy - True-----------------
-
-* **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue4" key="AzureAdUserEmail" value="StaticValue4" 
+* **checkNNumber:** <inject key="AzureAdUserEmail" value="StaticValue2" key="AzureAdUserPassword" value="StaticValue1" 
     enableCopy="true" />
+
+Enable Copy - False -----------------
+
+* **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue4" key="AzureAdUserEmail" enableCopy="false" />
 
 Sample Static Test Data ................
 
