--- a/1.md
+++ b/1.md
@@ -116,3 +116,7 @@ Labvm DNS Name : <inject key="Labvm DNS Name"></inject>
 To add params as in paragraph 
 >AzureAdUserEmail :** <inject key="AzureAdUserEmail"/>**
 >AzureAdUserPassword :** <inject key="AzureAdUserPassword"/>**
+
+Dec 3rd 2024 - MP changes 
+
+<inject key="AzureAdUserEmail" defaultvalue="MP@example.com">
