--- a/1.md
+++ b/1.md
@@ -119,4 +119,4 @@ To add params as in paragraph
 
 Dec 3rd 2024 - MP changes 
 
-<inject key="AzureAdUserEmail" defaultvalue="MP@example.com">
+<inject key="AzureAdUsermailid" defaultvalue="MP@example.com">
