--- a/1.md
+++ b/1.md
@@ -117,6 +117,6 @@ To add params as in paragraph
 >AzureAdUserEmail :** <inject key="AzureAdUserEmail"/>**
 >AzureAdUserPassword :** <inject key="AzureAdUserPassword"/>**
 
-Dec 3rd 2024 - MP changes 
+Dec 3rd 2024 - MP changes - SS
 
 <inject key="AzureAdUsermailid" defaultvalue="MP@example.com">
