--- a/1.md
+++ b/1.md
@@ -120,3 +120,5 @@ To add params as in paragraph
 Dec 3rd 2024 - MP changes - SS
 
 <inject key="AzureAdUsermailid" defaultvalue="MP@example.com">
+
+<inject key="Sample" defaultvalue="MP@example.com">
