--- a/1.md
+++ b/1.md
@@ -117,7 +117,7 @@ To add params as in paragraph
 >AzureAdUserEmail :** <inject key="AzureAdUserEmail"/>**
 >AzureAdUserPassword :** <inject key="AzureAdUserPassword"/>**
 
-Dec 3rd 2024 - MP changes - SS
+Dec 3rd 2024 - MP changes - SSss
 
 <inject key="AzureAdUsermailid" defaultvalue="MP@example.com">
 
