--- a/1.md
+++ b/1.md
@@ -117,9 +117,10 @@ To add params as in paragraph
 >AzureAdUserEmail :** <inject key="AzureAdUserEmail"/>**
 >AzureAdUserPassword :** <inject key="AzureAdUserPassword"/>**
 
-Dec 3rd 2024 - MP changes - SSss
+Dec 3rd 2024 - MP changes
 
-<inject key="AzureAdUsermailid" defaultvalue="MP@example.com">
+<inject key="AzureAdUserEmail" defaultvalue="MP@example.com">
+
 ```
 <inject key="Sample" defaultvalue="MP@example.com">
 ```
