--- a/1.md
+++ b/1.md
@@ -118,9 +118,10 @@ To add params as in paragraph
 >AzureAdUserPassword :** <inject key="AzureAdUserPassword"/>**
 
 Dec 3rd 2024 - MP changes
-
+Valid Inject key
 <inject key="AzureAdUserEmail" defaultvalue="MP@example.com">
 
 ```
+Invalid Inject key to check default value 
 <inject key="Sample" defaultvalue="MP@example.com">
 ```
