--- a/1.md
+++ b/1.md
@@ -125,3 +125,8 @@ Valid Inject key
 Invalid Inject key to check default value 
 <inject key="Sample" defaultvalue="MP@example.com">
 ```
+
+```
+Inject Key 
+<inject key="azureemailid" defaultvalue="example@example.com">
+```
