--- a/1.md
+++ b/1.md
@@ -125,5 +125,8 @@ Valid Inject key
 Invalid Inject key to check default value 
 <inject key="Sample" defaultvalue="MP@example.com">
 ```
-
+```
+Inject Key 
+<inject key="VHR Mail" defaultvalue="VHR@mail.com">
+```
 
