--- a/1.md
+++ b/1.md
@@ -127,6 +127,9 @@ Invalid Inject key to check default value
 ```
 ```
 Inject Key 
-<inject key="VHR Mail" defaultvalue="VHR@mail.com">
+<inject key="VHRMail" defaultvalue="VHR@mail.com">
 ```
 
+Inject Key with blank VHR
+<inject key="checkwihblank" defaultvalue="">
+```
