--- a/1.md
+++ b/1.md
@@ -129,7 +129,25 @@ Invalid Inject key to check default value
 Inject Key 
 <inject key="VHRMail" defaultvalue="VHR@mail.com">
 ```
-
+```
 Inject Key with blank VHR
 <inject key="checkwihblank" defaultvalue="">
+```
+```
+Inject Key with single line
+<inject key="VHRMail" defaultvalue="Inject Key with single line">
+```
+
+```
+Inject Key with Multiple lines
+<inject key="VHRMail" defaultvalue="Inject Key with Multiple lines">
+Inject key with static value :
+ 
+* **checkNNumber:** <inject key="testKey2" value="StaticValue2" key="testkay1"  value="StaticValue1" />
+ 
+* **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue3" key="testkay2"  value="StaticValue2" />
+ 
+* **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue2" key="AzureAdUserEmail" value="StaticValue1" 
+   enableCopy="false" />
+ 
 ```
