--- a/1.md
+++ b/1.md
@@ -151,3 +151,36 @@ Inject key with static value :
    enableCopy="false" />
  
 ```
+
+
+
+
+
+```
+Inject Key with key and default value 
+<inject key="azureemailid" defaultvalue="Divya@example.com">
+```
+
+```
+Inject Key without key value 
+<inject key="" defaultvalue="Divya@example.com">
+```
+
+```
+Inject Key without default value 
+<inject key="azureemailid" defaultvalue="">
+```
+
+```
+Inject Key with Multiple lines
+<inject key="Divya" defaultvalue="Inject Key with Multiple lines">
+Inject key with static value :
+ 
+* **checkNNumber:** <inject key="testKey2" value="StaticValue2" key="testkay1"  value="StaticValue1" />
+ 
+* **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue3" key="testkay2"  value="StaticValue2" />
+ 
+* **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue2" key="AzureAdUserEmail" value="StaticValue1" 
+   enableCopy="false" />
+ 
+```
