--- a/1.md
+++ b/1.md
@@ -184,3 +184,12 @@ Inject key with static value :
    enableCopy="false" />
  
 ```
+
+```
+AzureAdUserEmail : <inject key="AzureAdUserEmail"></inject>
+AzureAdUserPassword : <inject key="AzureAdUserPassword" style="color:blue"></inject>
+Deployment ID : <inject key="Deployment ID"></inject>
+Labvm Admin Username : <inject key="Labvm Admin Username"></inject>
+Labvm Admin Password : <inject key="Labvm Admin Password"></inject>
+Labvm DNS Name : <inject key="Labvm DNS Name"></inject>
+```
