--- a/1.md
+++ b/1.md
@@ -161,4 +161,9 @@ Inject Key with key and default value
 <inject key="azureemailid" defaultvalue="Divya@example.com">
 ```
 
+```
+Inject Key without key value 
+<inject key="" defaultvalue="Divya@example.com">
+```
+
 
