--- a/1.md
+++ b/1.md
@@ -125,45 +125,16 @@ Valid Inject key
 Invalid Inject key to check default value 
 <inject key="Sample" defaultvalue="MP@example.com">
 ```
-```
-Inject Key 
-<inject key="VHRMail" defaultvalue="VHR@mail.com">
-```
-```
-Inject Key with blank VHR
-<inject key="checkwihblank" defaultvalue=" ">
-```
-```
-Inject Key with single line
-<inject key="VHRMail" defaultvalue="Inject Key with single line">
-```
 
-```
-Inject Key with Multiple lines
-<inject key="VHRMail" defaultvalue="Inject Key with Multiple lines">
-Inject key with static value :
- 
-* **checkNNumber:** <inject key="testKey2" value="StaticValue2" key="testkay1"  value="StaticValue1" />
- 
-* **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue3" key="testkay2"  value="StaticValue2" />
- 
-* **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue2" key="AzureAdUserEmail" value="StaticValue1" 
-   enableCopy="false" />
- 
-```
-
-
-
-
-
-```
-Inject Key with key and default value 
-<inject key="azureemailid" defaultvalue="Divya@example.com">
-```
+-------------
 
 ```
 Inject Key without key value 
 <inject key="" defaultvalue="Divya@example.com">
 ```
-
+ 
+```
+Inject Key without default value 
+<inject key="azureemailid" defaultvalue="">
+```
 
