--- a/1.md
+++ b/1.md
@@ -165,5 +165,9 @@ Inject Key with key and default value
 Inject Key without key value 
 <inject key="" defaultvalue="Divya@example.com">
 ```
+```
+Inject Key without key value  by Anupam
+<inject key="" defaultvalue="Anupam@gmail.com">
+```
 
 
