--- a/1.md
+++ b/1.md
@@ -137,4 +137,18 @@ Inject Key without key value
 Inject Key without default value 
 <inject key="azureemailid" defaultvalue="">
 ```
+-----------------Anupam Area---------------------------------------
+```
+Inject Key without key value 
+<inject key="" defaultvalue="AnupamSingh.com">
+```
+
+
+
+
+
+
+
+
+---------------------------------------------------------------------
 
