--- a/1.md
+++ b/1.md
@@ -156,6 +156,14 @@ Latin words, combined with a handful of model sentence structures, to generate
 Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always
  free from repetition, injected humour, or non-characteristic words etc.">
 ```
+Color Your Eye Test
+<span style="color: green"> lab Guide </span>
+<span style="color: Blue"> test Pass </span>
+<span style="color: Yellow"> on today </span>
+<span style="color: Pink"> without fail</span>
+<span style="color: black"> 05 December</span>
+<span style="color: white"> last month of 2024</span>
+<span style="color: red"> Pushpa2</span>
 
 
 
