--- a/1.md
+++ b/1.md
@@ -157,12 +157,13 @@ Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore alway
  free from repetition, injected humour, or non-characteristic words etc.">
 ```
 Color Your Eye Test
+
 <span style="color: green"> lab Guide </span>
 <span style="color: Blue"> test Pass </span>
 <span style="color: Yellow"> on today </span>
 <span style="color: Pink"> without fail</span>
 <span style="color: black"> 05 December</span>
-<span style="color: white"> last month of 2024</span>
+<span style="color: blck"> last month of 2024</span>
 
 
 > https://giphy.com/gifs/rodneydangerfield-birthday-happy-happybirthday-LzwcNOrbA3aYvXK6r7
