--- a/1.md
+++ b/1.md
@@ -128,15 +128,6 @@ Invalid Inject key to check default value
 
 -------------
 
-```
-Inject Key without key value 
-<inject key="" defaultvalue="Divya@example.com">
-```
- 
-```
-Inject Key without default value 
-<inject key="azureemailid" defaultvalue="">
-```
 -----------------Anupam Area---------------------------------------
 ```
 Inject Key without key value 
@@ -168,8 +159,16 @@ Color Your Eye Test
 
 > https://giphy.com/gifs/rodneydangerfield-birthday-happy-happybirthday-LzwcNOrbA3aYvXK6r7
 
-
-
+-----------------------------------------------
+```
+Valid Inject key divya 
+<inject key="AzureAdUserEmail" defaultvalue="Divya@example.com">
+```
+ 
+```
+Inject Key without default value divya
+<inject key="AzureAdUserEmail" defaultvalue="">
+```
 
 
 
