--- a/1.md
+++ b/1.md
@@ -186,6 +186,16 @@ Inject Key without key and default value
 ```
 
 ```
+Inject key with special characters 
+<inject key="#AzureAdUserEmail#" defaultvalue="">
+```
+
+```
+Inject key with numbers and negative value  
+<inject key="-373AzureAdUserEmail536" defaultvalue="">
+```
+
+```
 Inject Key with long default name  
 <inject key="AzureAdUserEmail" defaultvalue="This is the Default value which is very long
 This is the Default value which is very long This is the Default value which is very long
