--- a/1.md
+++ b/1.md
@@ -207,3 +207,6 @@ This is the Default value which is very long This is the Default value which is 
 ```
 ---------------------------------------------------------------------
 
+Priya Inject Key 
+<inject key="azureemailid" defaultvalue="example@example.com">
+
