--- a/1.md
+++ b/1.md
@@ -217,3 +217,6 @@ Testing Valid Inject key
 ```
 <inject key="AzureAdUserPassword" defaultvalue="example@example.com">
 ```
+```
+<inject key="" defaultvalue="">
+```
