--- a/1.md
+++ b/1.md
@@ -220,3 +220,12 @@ Testing Valid Inject key
 ```
 <inject key="" defaultvalue="">
 ```
+```
+<inject key="AzureAdUserEmail" defaultvalue="">
+```
+```
+<inject key="" defaultvalue="sample@123.com">
+```
+```
+<inject key="AzureAdUserPassword" defaultvalue="uodq56AEV*17">
+```
