--- a/1.md
+++ b/1.md
@@ -218,7 +218,7 @@ Testing Valid Inject key
 <inject key="AzureAdUserPassword" defaultvalue="example@example.com">
 ```
 ```
-<inject key="" defaultvalue="">
+<inject key="azureemailid" defaultvalue="">
 ```
 ```
 <inject key="AzureAdUserEmail" defaultvalue="">
