--- a/1.md
+++ b/1.md
@@ -228,4 +228,5 @@ Testing Valid Inject key
 ```
 ```
 <inject key="AzureAdUserPassword" defaultvalue="uodq56AEV*17">
+<inject key="AzureAdUserPassword" defaultvalue="checking paragraph for default value">
 ```
