--- a/1.md
+++ b/1.md
@@ -215,18 +215,10 @@ Priya Testing Invalid Inject Key
 
 Testing Valid Inject key
 ```
-<inject key="AzureAdUserPassword" defaultvalue="example@example.com">
-```
-```
+<inject key="AzureAdUserPassword" defaultvalue="example@example.com" style="color: orange">
 <inject key="azureemailid" defaultvalue="">
-```
-```
 <inject key="AzureAdUserEmail" defaultvalue="">
-```
-```
-<inject key="" defaultvalue="sample@123.com">
-```
-```
-<inject key="AzureAdUserPassword" defaultvalue="uodq56AEV*17">
-<inject key="AzureAdUserPassword" defaultvalue="checking paragraph for default value">
+<inject key="" defaultvalue="sample@123.com" style="color: yellow">
+<inject key="AzureAdUserPassword" defaultvalue="uodq56AEV*17" style="color: green">
+<inject key="AzureAdUserPassword1" defaultvalue="checking paragraph for default value" style="color: pink">
 ```
