--- a/1.md
+++ b/1.md
@@ -210,15 +210,15 @@ This is the Default value which is very long This is the Default value which is 
 
 Priya Testing Invalid Inject Key 
 ```
-<inject key="azureemailid" defaultvalue="example@example.com">
+<inject key="azureemailid" defaultvalue="example@example.com" style="color:blue">
 ```
 
 Testing Valid Inject key
 ```
-<inject key="AzureAdUserPassword" defaultvalue="example@example.com" style="color: orange">
+<inject key="AzureAdUserPassword" defaultvalue="example@example.com">
 <inject key="azureemailid" defaultvalue="">
 <inject key="AzureAdUserEmail" defaultvalue="">
-<inject key="" defaultvalue="sample@123.com" style="color: yellow">
-<inject key="AzureAdUserPassword" defaultvalue="uodq56AEV*17" style="color: green">
-<inject key="AzureAdUserPassword1" defaultvalue="checking paragraph for default value" style="color: pink">
+<inject key="" defaultvalue="sample@123.com">
+<inject key="AzureAdUserPassword" defaultvalue="uodq56AEV*17">
+<inject key="AzureAdUserPassword1" defaultvalue="checking paragraph for default value">
 ```
