--- a/1.md
+++ b/1.md
@@ -210,7 +210,7 @@ This is the Default value which is very long This is the Default value which is 
 
 Priya Testing Invalid Inject Key 
 ```
-<inject key="azureemailid" defaultvalue="example@example.com" style="color:blue">
+<inject key="azureemailid" defaultvalue="example@example.com" style="color:yellow">
 ```
 
 Testing Valid Inject key
