--- a/1.md
+++ b/1.md
@@ -204,7 +204,9 @@ Color Your Eye Test
 
 
 > https://giphy.com/gifs/rodneydangerfield-birthday-happy-happybirthday-LzwcNOrbA3aYvXK6r7
->   ![ClipWindowsGIF]([https://github.com/bonzz/testguide/assets/76195593/5a83c32d-1e47-4eb2-897a-ffa18ed816a2](https://giphy.com/gifs/rodneydangerfield-birthday-happy-happybirthday-LzwcNOrbA3aYvXK6r7))
+>   ![ClipWindowsGIF]([https://github.com/bonzz/testguide/assets/76195593/5a83c32d-1e47-4eb2-897a-ffa18ed816a2
 
+gif
+>   ![ClipWindowsGIF](https://giphy.com/gifs/rodneydangerfield-birthday-happy-happybirthday-LzwcNOrbA3aYvXK6r7)
 -----------------------------------------------
 
