--- a/1.md
+++ b/1.md
@@ -207,6 +207,6 @@ Color Your Eye Test
 >   ![ClipWindowsGIF]([https://github.com/bonzz/testguide/assets/76195593/5a83c32d-1e47-4eb2-897a-ffa18ed816a2
 
 gif
->   ![ClipWindowsGIF](https://giphy.com/gifs/rodneydangerfield-birthday-happy-happybirthday-LzwcNOrbA3aYvXK6r7)
+>   ![ClipWindowsGIF](https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExd2VrbnR5ZnZzczczdjhnbGR6azZtaHkwbmR4ZWJibDVpYTltZndsbyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Y3NWfcC00m1Zp0lc2T/giphy.webp)
 -----------------------------------------------
 
