--- a/1.md
+++ b/1.md
@@ -121,6 +121,7 @@ Dec 3rd 2024 - MP changes
 Valid Inject key
 <inject key="AzureAdUserEmail" defaultvalue="MP@example.com">
 
+<inject key="**AzureAdUserEmail**" defaultvalue="MP@example.com">
 ```
 Invalid Inject key to check default value 
 <inject key="Sample" defaultvalue="MP@example.com">
