--- a/1.md
+++ b/1.md
@@ -211,3 +211,4 @@ gif
 >   ![ClipWindowsGIF](https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExd2VrbnR5ZnZzczczdjhnbGR6azZtaHkwbmR4ZWJibDVpYTltZndsbyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Y3NWfcC00m1Zp0lc2T/giphy.webp)
 -----------------------------------------------
 
+<span style="color: green"> <inject key="azureemailid" defaultvalue="example@example.com"> </span>
