--- a/1.md
+++ b/1.md
@@ -112,7 +112,7 @@ Labvm Admin Username : <inject key="Labvm Admin Username"></inject>
 Labvm Admin Password : <inject key="Labvm Admin Password"></inject>
 Labvm DNS Name : <inject key="Labvm DNS Name"></inject>
 ```
-
+><inject key="azureemailid" defaultvalue="example@example.com">
 To add params as in paragraph 
 >AzureAdUserEmail :** <inject key="AzureAdUserEmail"/>**
 >AzureAdUserPassword :** <inject key="AzureAdUserPassword"/>**
