--- a/1.md
+++ b/1.md
@@ -216,3 +216,9 @@ hhh
 
 
 -----------------Anupam new Area---------------------------------------
+<span style="color: green"> Friday</span>
+<span style="color: Blue"> tes </span>
+<span style="color: Yellow"> on </span>
+<span style="color: Pink"> without </span>
+<span style="color: black"> 27 December</span>
+<span style="color: blck"> last month of 2024</span>
