--- a/1.md
+++ b/1.md
@@ -224,3 +224,13 @@ hhh
 <span style="color: red"> last month of 2024</span>
 <span p="color: red"> last month of 2024</span>
 <span style="bgcolor: red"> last month of 2024</span>
+
+
+
+Valid Inject key
+<inject key="AzureAdUserEmail" defaultvalue="anupam@example.com">
+
+<inject key="**AzureAdUserEmail**" defaultvalue="anupam@example.com">
+```
+Invalid Inject key to check default value 
+<inject key="Sample" defaultvalue="anupam@example.com">
